--- a/src/styles.css
+++ b/src/styles.css
@@ -41,8 +41,16 @@ ul {
   font-size: 15px;
 }
 
+.font16 {
+  font-size: 16px;
+}
+
 .font17 {
   font-size: 17px;
+}
+
+.font18 {
+  font-size: 18px;
 }
 
 .font20 {
@@ -55,4 +63,8 @@ ul {
 
 .grid-row {
   display: grid;
+}
+
+.display-none {
+  display: none;
 }
