--- a/src/app/contents/contents.main/contents.main.component.css
+++ b/src/app/contents/contents.main/contents.main.component.css
@@ -13,6 +13,10 @@
   line-height: 347px;
 }
 
+.area-search {
+  height: 500px;
+}
+
 .area-title {
   margin: 30px 0;
   position: absolute;
@@ -31,7 +35,7 @@
   background-color: orange;
   position: relative;
   bottom: 12px;
-  left: -5px;
+  left: -2px;
 }
 
 .areas {
@@ -62,6 +66,10 @@
   align-self: center;
 }
 
+.kenmei > a:hover {
+  color: red;
+}
+
 .area-map {
   width: 460px;
   height: 60px;
@@ -69,24 +77,488 @@
   background-color: red;
   text-align: center;
   border-radius: 5px;
-}
-
-.area-map > a {
-  line-height: 60px;
   color: white;
   font-weight: bold;
+  display: block;
+  line-height: 60px;
 }
 
-.area-map > a > span {
+.area-map:hover {
+  background-color: rgb(231, 4, 4);
+}
+
+.area-map > span {
   margin-right: 5px;
-  font-size: 20px;
   vertical-align: middle;
 }
 
 .menu-search {
-  padding-top: 100px;
+  padding-top: 50px;
+  height: 300px;
 }
 
 .search-menu-list {
+  padding-top: 100px;
+  width: 945px;
   margin: 0 auto;
+}
+
+.grid-brock {
+  display: grid;
+  grid-template-columns: repeat(3, 315px);
+  grid-auto-rows: repeat(2, 72px);
+  justify-content: center;
+  align-content: center;
+  box-shadow: 0 0 8px #ccc, 0 0 8px #ccc, 0 0 8px #ccc;
+}
+
+.search-menu {
+  display: block;
+  width: 315px;
+  height: 72px;
+  line-height: 72px;
+  background-color: #ffffff;
+  font-weight: bold;
+  padding: 0 25px;
+  border: .5px solid rgb(233, 231, 231);
+}
+
+.search-menu:hover {
+  background-color: rgb(231, 230, 230);
+}
+
+.search-menu > span {
+  color: red;
+  float: right;
+}
+
+.main-review {
+  padding-top: 50px;
+  height: 500px;
+}
+
+.review-panels,
+.sagyou-panels {
+  padding-top: 100px;
+  width: 100%;
+  height: 304px;
+  position: relative;
+}
+
+.sagyou-panels {
+  height: 353px;
+}
+
+.panel-area,
+.sagyou-panel-area {
+  margin: 0 auto;
+  width: 900px;
+  max-width: 1000px;
+  display: flex;
+  overflow: visible;
+}
+
+.panel,
+.sagyou-panel {
+  flex-shrink: 0;
+  margin: 0 7px;
+  border: solid 1px #ccc;
+  border-radius: 5px;
+  width: 210px;
+  height: 304px;
+  box-shadow: 0 0 8px #ccc;
+  overflow: hidden;
+  position: relative;
+  transform: translateX(0);
+}
+
+.sagyou-panel {
+  height: 352px;
+  position: relative;
+}
+
+.panle2 {
+  height: 280px;
+  overflow: hidden;
+}
+
+.sagyou-store-panel {
+  width: 208px;
+  height: 70px;
+  line-height: 70px;
+  position: relative;
+}
+
+.sagyou-store-panel::before {
+  content: '';
+  position: absolute;
+  top: -2px;
+  left: 10%;
+  width: 80%;
+  height: 1px;
+  background-color: #ccc;
+}
+
+
+.sagyou-store-panel > a {
+  color: #4597ea;
+  font-size: 12px;
+  width: 208px;
+  height: 70px;
+  padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.sagyou-store-panel > a > span {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  line-height: 17px;
+  text-align: center;
+  border: 1px solid  #4597ea;
+  border-radius: 50%;
+  align-self: center;
+}
+
+.panel:hover, 
+.panel2:hover,
+.sagyou-store-panel:hover {
+  animation: border-red .5s ease-out forwards;
+}
+
+@keyframes border-red {
+  0%{
+
+  }
+  25%{
+    border-top: 2px solid red;
+  }
+  50%{
+    border-top: 2px solid red;
+    border-right: 2px solid red;
+  }
+  75%{ 
+    border-top: 2px solid red;
+    border-right: 2px solid red;
+    border-bottom: 2px solid red;
+  }
+  100%{
+    border: 2px solid red;
+  }
+}
+
+.panel1 {
+  opacity: .2;
+  transition: .2s linear;
+  pointer-events: none;
+}
+
+.review-image {
+  position: relative;
+  width: 100%;
+  height: 140px;
+  background-size: cover;
+}
+
+.review-image::after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 33%;
+  height: 3px;
+  background-color: red;
+}
+
+.review-image > span {
+  background-color: rgba(0,0,0,.7);
+  color: white;
+  font-size: 12px;
+  padding: 4px;
+}
+
+.review-contents,
+.sagyou-contents {
+  width: 208px;
+  height: 160px;
+  padding: 0 10px;
+  position: relative;
+}
+
+.sagyou-contents {
+  height: 141px;
+}
+
+.review-name {
+  padding-top: 10px;
+}
+
+.review-star {
+  padding: 20px 0 10px;
+  position: absolute;
+  bottom: 50px;
+  left: 10px;
+}
+
+.star-area {
+  width: 130px;
+  margin-right: 10px;
+  display: flex;
+}
+
+.star0 {
+  margin: 0;
+  padding: 0;
+  align-self: center;
+  width: 25px;
+  height: 25px;
+}
+
+.star1 {
+  margin: 0;
+  padding: 0;
+  align-self: center;
+  width: 25px;
+  height: 25px;
+}
+
+.hosoku {
+  background-color: #f5e9e9;
+  border-radius: 50px;
+  width: 158px;
+  height: 28px;
+  text-align: center;
+  line-height: 28px;
+  margin: 0 auto;
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+}
+
+.review-btn {
+  width: 50px;
+  height: 50px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 35px;
+  color: red;
+  border: 2px solid red;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.review-btn-left {
+  position: absolute;
+  top: calc(80px + 50%);
+  left: -10px;
+}
+
+.sagyou-btn-left {
+  position: absolute;
+  top: 50%;
+  left: -10px;
+}
+
+.review-btn-right {
+  position: absolute;
+  top: calc(80px + 50%);
+  right: -10px;
+}
+
+.sagyou-btn-right {
+  position: absolute;
+  top: 50%;
+  right: -10px;
+}
+
+.main-sagyou {
+  /* padding-top: 130px; */
+  height: 600px;
+}
+
+.sagyou-title > p {
+  padding-top: 40px;
+  padding-left: 130px;
+}
+
+.sagyou-panels {
+  padding-top: 40px;
+}
+
+.sagyou-panel {
+  position: relative;
+}
+
+.sagyou-p {
+  font-size: 11px;
+  padding-top: 5px;
+}
+
+.sagyou-p2 {
+  font-size: 11px;
+  padding-bottom: 5px;
+}
+
+.sagyou-price {
+  color: red;
+  margin: 5px 0;
+}
+
+.sagyou-motto {
+  margin: 50px 0;
+}
+
+.sagyou-motto > a {
+  height: 60px;
+  width: 380px;
+  font-size: 20px;
+  font-weight: 700;
+  color: red;
+  border: 2px solid red;
+  text-align: center;
+  line-height: 60px;
+  border-radius: 3px;
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  transition: background-color 1s;
+}
+
+.sagyou-motto > a:hover {
+  background-color: rgba(255,0,0,.2);
+}
+
+.sagyou-motto > a > span {
+  position: absolute;
+  top: 0;
+  right: 10%;
+  font-size: 22px;
+}
+
+.main-kensaku-zyouken{
+  height: 250px;
+}
+
+.kensaku-link-area {
+  max-width: 900px;
+  height: 150px;
+  margin: 0 auto;
+  padding-top: 100px;
+}
+
+.link-form {
+  display: inline-block;
+  height: 40px;
+  font-size: 14px;
+  background-color: #faf0f0;
+  line-height: 20px;
+  text-align: center;
+  margin: 10px 10px;
+  border-radius: 50px;
+  padding: 10px;
+  box-shadow: 0 1px 3px #ccc;
+}
+
+.link-form:hover {
+  background-color: rgba(255,0,0,.2);
+}
+
+.main-sibori {
+  height: 400px;
+}
+
+.sibori-area {
+  padding-top: 100px;
+  padding-bottom: 50px;
+}
+
+.sibori-waku {
+  width: 1000px;
+  height: 110px;
+  padding: 0 20px;
+  background-color: #f5f5f5;
+  box-shadow: 0 2px 10px rgba(0,0,0,.15);
+  display: flex;
+  justify-content: space-between;
+}
+
+.sibori-contents-areas {
+  display: flex;
+}
+
+.sibori-contents-area, 
+.sibori-contents-area1 {
+  align-self: center;
+  width: 230px;
+  height: 69px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  border-radius: 3px;
+  font-weight: bold;
+  font-size: 15px;
+  color: white;
+  background-color: red;
+}
+
+.sibori-contents-area1 {
+  color: red;
+  background-color: white;
+}
+
+.sibori-contents {
+  align-self: center;
+  width: 230px;
+  height: 69px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  padding: 0 20px;
+  border-radius: 3px;
+}
+
+.sibori-content {
+  display: flex;
+  align-items: center;
+}
+
+.sibori-contents-area .sibori-area-logo-area,
+.sibori-contents-area1 .sibori-area-logo-area {
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  line-height: 35px;
+  border-radius: 50%;
+  margin-right: 20px;
+  border: 2px solid white;
+  color: white;
+}
+
+.sibori-contents-area1 .sibori-area-logo-area {
+  border: 2px solid #ccc;
+  color: #ccc;
+
+}
+
+.sibori-area-logo {
+  color: red;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+}
+
+.sibori-contents p {
+  color: red;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.sibori-area-right {
+  font-size: 20px;
+  color: rgb(177, 168, 168);
 }
