--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -55,11 +55,26 @@
   padding: 0 5px;
 }
 
+
+.sub-ber {
+  overflow: hidden;
+}
+
 .sub-ul {
   width: 100%;
   height: 32px;
   line-height: 32px;
   display: table;
+  animation: bar 1s;
+}
+
+@keyframes bar {
+  to{
+    transform: translateY(0);
+  }
+  from{
+    transform: translateY(-20px);
+  }
 }
 
 .sub-list {
@@ -67,6 +82,7 @@
   border: 1px solid #ccc;
   text-align: center;
   cursor: pointer;
+  
 }
 
 .sub-list:hover {
@@ -76,4 +92,5 @@
 .header-root {
   display: flex;
   width: 100%;
+  margin: 5px 0;
 }
