モーダルを拾って入れた　これからちゃんと作る

--- a/src/app/contents/contents.main/contents.main.component.html
+++ b/src/app/contents/contents.main/contents.main.component.html
@@ -212,3 +212,8 @@
   </div>
 
 </div>
+
+<div class="footer">
+  <input id="footer_button" type="button" value="open modal" (click)="onClick($event);">
+</div>
+<ng-container *ngComponentOutlet="modal"></ng-container>
