モーダルヘッダー　カルーセル実装

--- a/src/app/contents/contents.main/contents.main.component.css
+++ b/src/app/contents/contents.main/contents.main.component.css
@@ -1,12 +1,13 @@
 .contents-main {
-  max-width: 1000px;
+  /* max-width: 1000px; */
   width: 100%;
   margin: 0 auto;
 }
 
 .main-image {
-  width: 100%;
+  width: 1000px;
   height: 347px;
+  margin: 0 auto;
   background-color: red;
   font-size: 30px;
   text-align: center;
@@ -15,11 +16,34 @@
 
 .area-search {
   height: 500px;
+  padding-top: 30px;
 }
 
 .area-title {
-  margin: 30px 0;
+  width: 1000px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.area-title > h2 {
+  font-size: 26px;
+  height: 31px;
+  z-index: 1;
   position: absolute;
+  background: linear-gradient(transparent 80%, orange 20%);
+  padding: 0;
+}
+
+.area-title > p {
+  padding-top: 10px;
+  padding-left: 130px;
+}
+
+
+/* 
+.area-title {
+  position: absolute;
+  margin: 30px 0;
 }
 
 .area-title > h2 {
@@ -36,11 +60,13 @@
   position: relative;
   bottom: 12px;
   left: -2px;
-}
+} */
 
 .areas {
   padding-top: 100px;
   display: flex;
+  width: 1000px;
+  margin: 0 auto;
 }
 
 .areas-padding {
@@ -95,6 +121,8 @@
 .menu-search {
   padding-top: 50px;
   height: 300px;
+  /* width: 1000px; */
+  margin: 0 auto;
 }
 
 .search-menu-list {
@@ -135,6 +163,8 @@
 .main-review {
   padding-top: 50px;
   height: 500px;
+  overflow: hidden;
+  margin: 0 auto;
 }
 
 .review-panels,
@@ -143,6 +173,7 @@
   width: 100%;
   height: 304px;
   position: relative;
+  transform: translate(0);
 }
 
 .sagyou-panels {
@@ -153,9 +184,20 @@
 .sagyou-panel-area {
   margin: 0 auto;
   width: 900px;
-  max-width: 1000px;
   display: flex;
   overflow: visible;
+  transition-property: transform;
+  transition-duration: .3s;
+}
+
+.panel-area1 {
+  margin: 0 auto;
+  width: 900px;
+  display: flex;
+  overflow: visible;
+  transform: translate(-900px);
+  transition-property: transform;
+  transition-duration: .3s;
 }
 
 .panel,
@@ -169,7 +211,6 @@
   box-shadow: 0 0 8px #ccc;
   overflow: hidden;
   position: relative;
-  transform: translateX(0);
 }
 
 .sagyou-panel {
@@ -251,6 +292,7 @@
 .panel1 {
   opacity: .2;
   transition: .2s linear;
+  margin: 0 7px;
   pointer-events: none;
 }
 
@@ -352,35 +394,35 @@
 .review-btn-left {
   position: absolute;
   top: calc(80px + 50%);
-  left: -10px;
+  left: 10%;
+  z-index: 1;
 }
 
 .sagyou-btn-left {
   position: absolute;
   top: 50%;
-  left: -10px;
+  left: 10%;
+  z-index: 1;
 }
 
 .review-btn-right {
   position: absolute;
   top: calc(80px + 50%);
-  right: -10px;
+  right: 10%;
+  z-index: 1;
 }
 
 .sagyou-btn-right {
   position: absolute;
   top: 50%;
-  right: -10px;
+  right: 10%;
+  z-index: 1;
 }
 
 .main-sagyou {
   /* padding-top: 130px; */
   height: 600px;
-}
-
-.sagyou-title > p {
-  padding-top: 40px;
-  padding-left: 130px;
+  overflow: hidden;
 }
 
 .sagyou-panels {
@@ -475,6 +517,7 @@
 }
 
 .sibori-waku {
+  margin: 0 auto;
   width: 1000px;
   height: 110px;
   padding: 0 20px;
