--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  display: block;
+}
+
 body {
   margin: 0;
   background-color: #fff;
@@ -17,6 +21,7 @@ body {
   line-height: 1.5;
   -webkit-text-size-adjust: none;
   overflow-y: scroll;
+  display: block;
 }
 
 a {
