--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -32,10 +32,12 @@
     font-weight: bold;
     margin: 0 0 10px auto;
     border-radius: 5px;
+    cursor: pointer;
   }
   
   .modal {
     height: 500px;
     width: 1000px;
     background-color: white;
+    padding-bottom: 150px;
   }
