モーダル繊維前処理

--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -10,6 +10,10 @@
     z-index: 2;
   }
 
+  .overlay.hidden {
+    display: none;
+  }
+
   .modal-full {
     width: 1000px;
     height: 600px;
@@ -40,4 +44,8 @@
     width: 1000px;
     background-color: white;
     padding-bottom: 150px;
+  }
+
+  .hidden {
+    display: none;
   }
