--- a/src/app/modal/modal.area/modal.area.component.css
+++ b/src/app/modal/modal.area/modal.area.component.css
@@ -4,7 +4,10 @@
     padding-top: 30px;
     padding-bottom: 100px;
     overflow: scroll;
+}
 
+.modal-area-search.hidden {
+    display: none;
 }
 
 .zenkoku {
@@ -13,20 +16,6 @@
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
     margin: 0 auto;
-}
-
-.check-form {
-    width: 100%;
-    height: 100%;
-    padding: 0 10px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-
-input[type="radio"] {
-    width: 30px;
-    height: 30px;
 }
 
 .modal-area-search p {
