--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="overlay">
+<div class="overlay" [class.hidden]="isModalOpen">
   <div class="modal-full">
     <div class="modal-close">
       <div class="modal-close-btn" (click)="close()">×</div>
@@ -7,8 +7,9 @@
     <div class="modal">
       <ng-container *ngComponentOutlet="modalHeader"></ng-container>
       
-      <!-- <ng-container *ngComponentOutlet="modalArea"></ng-container> -->
+      <ng-container *ngComponentOutlet="modalArea" [class.hidden]="isModalSelect"></ng-container>
       <ng-container *ngComponentOutlet="modalMenu"></ng-container>
+      <ng-container *ngComponentOutlet="modalMaker"></ng-container>
 
       <ng-container *ngComponentOutlet="modalFooter"></ng-container>
     </div>
