--- a/src/app/modal/modal.header/modal.header.component.html
+++ b/src/app/modal/modal.header/modal.header.component.html
@@ -1,10 +1,10 @@
 <div class="modal-header">
-  <div class="modal-header-categoris">
+  <div class="modal-header-categoris" (click)="modalOpneArea()">
     <div class="modal-header-categori">
       <p>エリア選択</p>
     </div>
 
-    <div class="modal-header-categori">
+    <div class="modal-header-categori" (click)="modalOpneMenu()">
       <p>メニュー選択</p>
     </div>
 
@@ -12,7 +12,7 @@
       <p>メーカー排気量選択</p>
     </div>
 
-    <div class="modal-header-categori-kensaku">
+    <div class="modal-header-categori-kensaku" (click)="modalOpneMaker()">
       <span class="material-icons">find_replace</span>
       <p>検索する</p>
     </div>
