--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -7,7 +7,7 @@
     <div class="modal">
       <ng-container *ngComponentOutlet="modalHeader"></ng-container>
       
-      <ng-container *ngComponentOutlet="modalArea" [class.hidden]="isModalSelect"></ng-container>
+      <!-- <ng-container *ngComponentOutlet="modalArea" [class.hidden]="isModalSelect"></ng-container> -->
       <ng-container *ngComponentOutlet="modalMenu"></ng-container>
       <ng-container *ngComponentOutlet="modalMaker"></ng-container>
 
