--- a/src/app/modal/modal.header/modal.header.component.html
+++ b/src/app/modal/modal.header/modal.header.component.html
@@ -4,7 +4,7 @@
       <p>エリア選択</p>
     </div>
 
-    <div class="modal-header-categori" (click)="modalOpneMenu()">
+    <div class="modal-header-categori">
       <p>メニュー選択</p>
     </div>
 
@@ -12,7 +12,7 @@
       <p>メーカー排気量選択</p>
     </div>
 
-    <div class="modal-header-categori-kensaku" (click)="modalOpneMaker()">
+    <div class="modal-header-categori-kensaku">
       <span class="material-icons">find_replace</span>
       <p>検索する</p>
     </div>
