--- a/src/app/modal/modal.maker/modal.maker.component.css
+++ b/src/app/modal/modal.maker/modal.maker.component.css
@@ -21,24 +21,6 @@
     position: relative;
 }
 
-.select-content > h3 {
-    display: block;
-    width: 70px;
-}
-
-.select-content > select {
-    height: 40px;
-    width: 236px;
-    padding: 0 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #ccc;
-    opacity: .5;
-    cursor: pointer;
-    appearance: none;
-    z-index: 1;
-}
-
 .select-content::before {
     content: '＞';
     display: block;
@@ -52,6 +34,35 @@
     bottom: 0;
     right: 15px;
     cursor: pointer;
+    z-index: 1;
+}
+
+.select-content > h3 {
+    display: block;
+    width: 70px;
+}
+
+.select-content > h3:last-child {
+    text-align: center;
+}
+
+select {
+    height: 40px;
+    width: 236px;
+    padding: 0 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #ccc;
+    opacity: .5;
+    cursor: pointer;
+    appearance: none;
+    z-index: 1;
+}
+
+.selected {
+    background-color: white;
+    border: 2px solid #ccc;
+    opacity: 1;
 }
 
 
