--- a/src/app/modal/modal.menu/modal.menu.component.css
+++ b/src/app/modal/modal.menu/modal.menu.component.css
@@ -21,6 +21,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+
 .check-form {
     padding: 0 20px;
 }
@@ -30,3 +31,37 @@
     font-weight: 700;
     padding-left: 10px;
 }
+
+input[type='checkbox']::before {
+    content: attr(title);
+    color: black;
+    font-size: 14px;
+    font-weight: bold;
+    position: absolute;
+    top: 15px;
+    left: 50px;
+}
+  
+input[type='checkbox']:checked::before {
+  content: attr(title);
+  color: red;
+}
+
+input[type='checkbox']::after {
+    content: '';
+    display: block;
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
+    border-radius: 5px;
+    position: absolute;
+    top: -1px;
+    left: -1px;
+}
+
+input[type='checkbox']:checked::after {
+  content: '';
+  background-color: rgb(248, 60, 60);
+  border: 2px solid red;
+  opacity: .5;
+}
+
