モーダルの各コンポーネントを 親コンポーネントに表示確認

--- a/src/app/contents/contents.main/contents.main.component.css
+++ b/src/app/contents/contents.main/contents.main.component.css
@@ -239,7 +239,6 @@
   background-color: #ccc;
 }
 
-
 .sagyou-store-panel > a {
   color: #4597ea;
   font-size: 12px;
@@ -561,6 +560,7 @@
   background-color: #fff;
   padding: 0 20px;
   border-radius: 3px;
+  cursor: pointer;
 }
 
 .sibori-content {
