モーダルコンポーネントで表示管理状態

--- a/src/app/contents/contents.main/contents.main.component.html
+++ b/src/app/contents/contents.main/contents.main.component.html
@@ -145,10 +145,9 @@
 
     <div class="sibori-area">
       <div class="sibori-waku">
+        <!-- エリアを検索 -->
         <div class="sibori-contents-areas">
-
-          <!-- エリアを検索 -->
-          <div class="sibori-contents">
+          <div class="sibori-contents" (click)="modalOpen()">
             <div class="sibori-content">
               <div class="sibori-area-logo">□</div>
               <div class="sibori-area-textarea">
