--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="overlay" [class.hidden]="!isView">
+<div class="overlay" [class.hidden]="!modalService.getIsView()">
   <div class="modal-full">
     <div class="modal-close">
       <div class="modal-close-btn" (click)="close()">×</div>
